--- a/Wolnik.IdSrv/Wolnik.IdSrv.csproj
+++ b/Wolnik.IdSrv/Wolnik.IdSrv.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
   </ItemGroup>
 
