--- a/Wolnik.Client/Wolnik.Client.csproj
+++ b/Wolnik.Client/Wolnik.Client.csproj
@@ -6,8 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="2.14.0" />
-    <PackageReference Include="Microsoft.AspNet.Authentication.Cookies" Version="1.0.0-rc1-final" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="2.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.0" />
   </ItemGroup>
@@ -18,12 +18,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Wolnik.Model\Wolnik.Model.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="IdentityServer4">
-      <HintPath>..\..\..\..\Users\mawo\.nuget\packages\identityserver4\2.0.2\lib\netstandard2.0\IdentityServer4.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
